Fixed server box alignment
Closes #5

Server boxes will now remain in grid when a server loses connection.
It's right aligned so that it fits more with the right aligned headers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,11 @@ em { font-style: italic; }
 
 #middle { width: 100%; background-color: #DED4B9; text-align: center; padding-bottom: 15px;}
 
+#servers {
+    padding: 0px 44px;
+    text-align: right;
+}
+
 #wrapper {
     max-width: 1000px;
     margin-left: auto;
